<resources>
    <string name="app_name">Data Form Kotlin</string>
    <string name="no_items">Empty List.</string>
    <string name="fill_details">Fill Details</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="Rs">\u20B9</string>
    <string name="amount">Amount ( \u20B9 )</string>
    <string name="add">Add</string>
    <string name="delete_item_desc">delete item</string>
    <string name="item_removed_msg">Item deleted</string>

    <!--    Form Validation messages-->

    <string name="invalid_name">Enter valid name for item.</string>
    <string name="invalid_amount">Amount is less than ZERO.Please, Adjust Rate or Qty.</string>
    <string name="add_item_success">Great! New item added.</string>
    <string name="add_item_fail">Oops! Unable to add new item.</string>
</resources>