<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="item"
            type="com.standalone.dataformkotlin.data.Item" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_side_margin"
        android:layout_marginEnd="@dimen/card_side_margin"
        android:layout_marginBottom="@dimen/card_bottom_margin"
        android:paddingBottom="@dimen/card_bottom_padding"
        app:cardElevation="@dimen/card_elevation"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Item.Card.Rounded">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:layout_marginLeft="@dimen/margin_padding_small"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/delete_item_desc"
                android:onClick="@{clickListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_amount"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_rate" />

            <TextView
                android:id="@+id/card_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:layout_marginLeft="@dimen/margin_padding_small"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/item_name"
                android:text="@{item.name}"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/card_amount"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:hint="@string/rate"
                android:text="@{item.rate}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/card_amount"
                app:layout_constraintStart_toStartOf="@+id/card_name"
                app:layout_constraintTop_toBottomOf="@id/card_name" />

            <TextView
                android:id="@+id/card_qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/quantity"
                android:text="@{item.qty}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="@+id/card_rate"
                app:layout_constraintTop_toBottomOf="@+id/card_rate" />

            <TextView
                android:id="@+id/card_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="@dimen/margin_padding_small"
                android:layout_marginRight="@dimen/margin_padding_small"
                android:gravity="end"
                android:hint="@string/amount"
                android:text="@{`\u20B9 `+ item.amount}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.97"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/card_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>